# Web-scraping

./: main.py  pyproject.toml  scrape.py  seeds.py
conf/: models.py
data/: authors.json
